# Boray_python

./: README.md  pyproject.toml
src/boray/: __init__.py  auxiliary.py  cli.py  constants.py  dispersion.py  equilibrium.py  examples.py  io.py  models.py  plotting.py  solovev.py  tracing.py
src/boray_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_equilibrium.py  test_smoke_run.py  test_solovev.py
