[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boray-python"
version = "0.1.0"
description = "Python port of the BORAY axisymmetric plasma ray-tracing code."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.0",
  "scipy>=1.14",
]

[project.optional-dependencies]
io = [
  "netCDF4>=1.7",
]
dev = [
  "pytest>=8.3",
]

[project.scripts]
boray = "boray.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
